--- a/recruitment_invoice_creation/views/hr_employee_views.xml
+++ b/recruitment_invoice_creation/views/hr_employee_views.xml
@@ -24,6 +24,8 @@
                 <group string="SOW">
                     <field name="sow_start_date"/>
                     <field name="sow_end_date"/>
+                    <field name="sow_rate"/>
+                    <field name="sow_ref"/>
                     <field name="notify_to" widget="many2many_tags"/>
                 </group>
             </xpath>
