--- a/recruitment_invoice_creation/views/hr_employee_views.xml
+++ b/recruitment_invoice_creation/views/hr_employee_views.xml
@@ -19,6 +19,7 @@
 	        </xpath>
 	        <xpath expr="//field[@name='is_module_lead']" position="after">
 	        	<field name="client_hired_date" readonly="1"/>
+	        	<field name="job_type_id"/>
 	        </xpath>
 	        <xpath expr="//sheet/group[1]" position="inside">
                 <group string="SOW">
