--- a/screening/views/hr_screening_views.xml
+++ b/screening/views/hr_screening_views.xml
@@ -56,7 +56,7 @@
                     <group>
                         <group>
                             
-                            <field name="job_id" options="{'no_create': True, 'no_create_edit': True}" attrs="{'required': [('stage_id', '!=', 'not_screened')]}"/>
+                            <field name="job_id" options="{'no_create': True, 'no_create_edit': True}"/>
                             <field name="job_type_id" options="{'no_create': True, 'no_create_edit': True}" attrs="{'required': [('stage_id', '!=', 'not_screened')]}"/>
                             <field name="department_id" options="{'no_create': True, 'no_create_edit': True}" attrs="{'required': [('stage_id', '!=', 'not_screened')]}"/>
                             <field name="offer_letter_type" attrs="{'required': [('stage_id', '!=', 'not_screened')]}"/>
@@ -96,7 +96,7 @@
                                 <field name="notice_period_id" options="{'no_create': True, 'no_create_edit': True}" attrs="{'required': [('stage_id', '!=', 'not_screened')]}"/>
                                 <field name="other_offers_bool" widget="selection"/>
                                 <field name="offer_price" attrs="{'invisible': [('other_offers_bool', '!=', 'yes')]}"/>
-                                <field name="screening_date" attrs="{'required': [('stage_id', '!=', 'not_screened')]}"/>
+                                <field name="screening_date"/>
                                 <field name="joining_date" attrs="{'invisible': [('other_offers_bool', '!=', 'yes')]}"/>
                                 
                             </group>
@@ -168,7 +168,7 @@
                             <group string="Work Experience">
                                 <label for="total_exp_year" string="Total Experience"/>
                                 <div class="o_row" name="total_experience">
-                                    <field name="total_exp_year" style="width:30%%" attrs="{'required': [('stage_id', '!=', 'not_screened')]}"/>
+                                    <field name="total_exp_year" style="width:30%%"/>
                                     <span>Years</span>
                                     <field name="total_exp_month" style="width:30%%"/>
                                     <span>Months</span>
